<resources>
    <string name="app_name">JobMe</string>
    <string name="lookingforajob">I\'m looking for a job</string>
    <string name="lookingforastaff">I\'m looking for a staff</string>
    <string name="lines">------</string>
    <string name="or">OR</string>
    <string name="email_address">Địa chỉ e-mail</string>
    <string name="username">Nhập tên đăng nhập</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Đăng nhập</string>
    <string name="dont_have_account">Chưa có tài khoản?</string>
    <string name="register">Đăng ký</string>
    <string name="remember_me">Lưu tên tài khoản</string>
    <string name="sign_in_by_facebook">Login in facebook</string>
    <string name="notification">Notification</string>
    <string name="give_feedback">Give Feedback</string>

    <string name="logout">Logout</string>
    <string name="fullname">Trang Trang</string>
    <string name="trang_email">trangnguyen@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Open</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to register -->
    <string name="first_name">Nhập tên của bạn</string>
    <string name="last_name">Nhập họ của bạn</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create">Tạo</string>
    <string name="phone_number">Số điên thoại</string>
    <string name="profile">Profile</string>
    <string name="chat_bottom">Chat</string>
    <string name="history_bottom">History</string>
    <string name="job_bottom">Jobs</string>

</resources>
