<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="@drawable/background_login"
    tools:context="com.happycity.project.jobme.activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"

            android:layout_gravity="center" />
        <LinearLayout
            android:id="@+id/layout_sign_in_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="20dp"
                android:textColorHint="@android:color/white"
                android:padding="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableLeft="@drawable/password"
                android:textColorHint="@android:color/white"
                android:padding="20dp"
                android:drawablePadding="20dp"/>
            <CheckBox
                android:id="@+id/checkbox_state_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btnSignIn"
            android:layout_below="@+id/layout_sign_in_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:background="@color/colorButtonLookingForAJob"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/register"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:drawableLeft="@drawable/facebook_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_by_facebook"
        android:background="@color/colorButtonFacebook"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
